# pysymex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .scan_output.txt  ACCEL_INTEGRATION_GAP.md  ARCHITECTURAL_HEALTH_REPORT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DISCOVERIES.md  LICENSE  README.md  ROADMAP.md  architecture_blueprint.md  benchmark_chtd_lossless.py  benchmark_extreme.py  benchmark_insane.py  benchmark_level1.py  benchmark_level2.py  benchmark_level3.py  benchmark_level4.py  benchmark_level5.py  benchmark_logical_detection.py  benchmark_synthetic_v2.py  debug_static.py  debug_static2.py  debug_vars.py  docker-compose.yml  dump_stack.py  extreme_test.py  generate_detectors.py  profile.txt  pyproject.toml  pyrightconfig.json  pyrightconfig_tests.json  quick_test.py  restore_architecture.py  restore_capability_files.py  run_benchmarks.py  run_logic_benchmarks.py  (+10 more)
.github/instructions/: core-review.instructions.md
.github/prompts/: core-maintainer-audit.prompt.md  core-regression-test-generator.prompt.md
.github/workflows/: ci.yml  copilot-instructions.md  publish.yml  pypi-publish.yml
.pysymex/traces/: trace_20260310T000822_scan_buggy_code.jsonl  trace_20260310T021001_scan_buggy_code.jsonl
benchmarks/: README.md  baseline.json  benchmark_matrix.json  comparison-v0.3.0a0-v0.4.0a0.md  v0.1.0a0-results.md  v0.1.0a4-results.md
docker/: Dockerfile.311  Dockerfile.312  Dockerfile.313  README.md
docs/: API.md  CHTD_ARCHITECTURE.md  CLI.md  SCANNER.md  advanced.rst  api.rst  conf.py  contributing.rst  index.rst  quickstart.rst  userguide.rst
docs/arch/: ACCELERATION.md  AST_MIGRATION_PLAN.md  CHTD_ARCHITECTURE.md  CONTRACTS.md  H_ACCELERATION.md  ROOFLINE.md  SANDBOX_SECURITY.md  SMT_SLICING.md
docs/notes/: ALGORITHM_AUDIT.md  CONTRACTS.md  STATE_MERGER_PC_OFFSET_BUG.md  TRACING_ENHANCEMENT_PLAN.md
examples/: __init__.py  buggy_code.py  concolic_demo.py  contract_demo.py  deep_path_bug.py  example_functions.py  insane_bugpack.py  tracer_integration.py
pyspectre/: __init__.py  __main__.py  analyze.py  api.py  ci.py  cli.py  config.py  logging.py  resources.py  scanner.py  security.py  verify_cli.py
pyspectre/analysis/: __init__.py  abstract_domains.py  abstract_interpreter.py  advanced_detectors.py  arithmetic_safety.py  assertion_context.py  autotuner.py  bounds_checking.py  cache.py  callgraph.py  concolic.py  concurrency.py  contracts.py  cross_function.py  dead_code.py  detectors.py  enhanced_detectors.py  enhanced_scanner.py  exception_analysis.py  exception_handler.py  flow_sensitive.py  fp_filter.py  function_models.py  interprocedural.py  invariants.py  loops.py  none_check.py  path_manager.py  pattern_handlers.py  properties.py  range_analysis.py  resource_analysis.py  resource_lifecycle.py  scanner_integration.py  state_merger.py  string_analysis.py  summaries.py  symbolic_engine.py  taint.py  taint_analysis.py  (+5 more)
pyspectre/benchmarks/: __init__.py  suite.py
pyspectre/contracts/: __init__.py  quantifiers.py
pyspectre/core/: __init__.py  collections.py  exceptions.py  floats.py  iterators.py  memory.py  memory_model.py  object_model.py  oop_support.py  optimization.py  parallel.py  solver.py  state.py  symbolic_types.py  types.py  watch.py
pyspectre/execution/: __init__.py  dispatcher.py  executor.py  verified_executor.py
pyspectre/models/: __init__.py  asyncio_models.py  builtins.py  collections_models.py  contextlib_models.py  dataclasses_models.py  dicts.py  functools_models.py  itertools_models.py  lists.py  objects.py  pathlib_models.py  regex.py  sets.py  stdlib.py  strings.py
pyspectre/plugins/: __init__.py  base.py
pyspectre/reporting/: __init__.py  formatters.py  html_report.py  reproduction.py  sarif.py
pyspectre/testing/: __init__.py  fuzzing.py
pysymex/: __init__.py  __main__.py  _compat.py  _constants.py  _deps.py  _typing.py  api.py  async_api.py  config.py  logger.py  logging.py  resources.py  sandbox_bridge.py  security.py  verify_cli.py  watch.py
pysymex/accel/: __init__.py  async_exec.py  benchmark.py  bytecode.py  chtd.py  chtd_integration.py  chtd_solver.py  dispatcher.py  memory.py  optimizer.py  sampling.py
pysymex/analysis/: __init__.py  arithmetic_safety.py  assertion_context.py  autotuner.py  bounds_checking.py  builtin_models.py  callgraph.py  cfg.py  concolic.py  escape_analysis.py  false_positive_filter.py  flow_sensitive.py  function_models.py  interleaving.py  interprocedural.py  invariants.py  method_models.py  none_check.py  path_manager.py  protocol_checker.py  range_analysis.py  state_merger.py  string_analysis.py
pysymex/benchmarks/: __init__.py  suite.py  suite_core.py  suite_types.py
pysymex/ci/: __init__.py  core.py  types.py
pysymex/cli/: __init__.py  commands.py  parser.py  reporter.py  scan.py  (+1 more)
scripts/: accel_coverage_analyzer.py  cache_coverage_map.py  chtd_ts_coverage_map.py  ci_perf_gate.py  deep_audit.py  fix_docstring_indent.py  visualize_paths.py
tests/: __init__.py  check_missing_opcodes.py  conftest.py  docker.py  helpers.py  repro_aliasing.py  repro_scope_fidelity.py  test_abstract_domains.py  test_abstract_interpreter.py  test_advanced_floats_e2e.py  test_adversarial_contracts_soundness.py  test_adversarial_dead_code_soundness.py  test_adversarial_deep_soundness.py  test_adversarial_exceptions_soundness.py  test_adversarial_gaps.py  test_adversarial_properties_soundness.py  test_adversarial_summary_soundness.py  test_analysis_audit_fixes.py  test_analysis_bugfixes.py  test_analysis_isolation.py  test_analysis_subpackages.py  test_analyze_div.py  test_assertion_context.py  test_async_e2e.py  test_async_executor.py  test_audit_repro.py  test_benchmarks.py  test_benchmarks_suite.py  test_bitwise_operators.py  test_bug_fixes.py  test_bugs.py  test_builtin_models_analysis.py  test_cache.py  test_cache_security.py  test_cfg.py  test_chtd_smoke.py  test_ci.py  test_ci_module.py  test_cli_extended.py  test_cli_parser.py  (+206 more)
tmp_tests/: test_branch_history.py  test_cig.py  test_mus_gatekeeper.py  test_tts.py  test_union_find.py  test_unsat_core_registry.py
(+962 files in other folders)
