[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysymex"
version = "0.1.0a3"
description = "EDUCATIONAL PURPOSES ONLY: A symbolic execution engine for studying formal verification concepts. Not for production use."
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "PySyMex Team"}
]
keywords = [
    "symbolic-execution",
    "static-analysis",
    "bytecode",
    "z3",
    "educational",
    "research-prototype",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "z3-solver>=4.12.0",
    "pydantic>=2.0.0",
    "icontract>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# Hardware acceleration backends
accel-cpu = [
    "numpy>=1.20.0",
    "numba>=0.58.0",         # Parallel CPU JIT compilation
    "scipy>=1.10.0",         # Thompson Sampling UCBs
]
accel-gpu = [
    "numpy>=1.20.0",
    "cupy-cuda12x>=13.0.0",  # CUDA NVRTC compilation
    "scipy>=1.10.0",
]
accelerate = [
    "numpy>=1.20.0",
    "numba>=0.58.0",
    "cupy-cuda12x>=13.0.0",
    "scipy>=1.10.0",
]

# Legacy aliases
gpu = [
    "numpy>=1.20.0",
    "numba>=0.58.0",
    "cupy-cuda12x>=13.0.0",
    "scipy>=1.10.0",
]
gpu-cuda = [
    "numpy>=1.20.0",
    "cupy-cuda12x>=13.0.0",
    "scipy>=1.10.0",
]

# Full installation with all optional dependencies
all = [
    "pysymex[dev,gpu]",
]

[project.scripts]
pysymex = "pysymex.cli:main"
pysymex-verify = "pysymex.verify_cli:main"
pysymex-trace-analyze = "pysymex.tracing.cli_analyzer:main"

[project.urls]
Homepage = "https://github.com/darkoss1/pysymex"
Documentation = "https://github.com/darkoss1/pysymex#readme"
Repository = "https://github.com/darkoss1/pysymex"
Issues = "https://github.com/darkoss1/pysymex/issues"

[tool.setuptools.packages.find]
include = ["pysymex*"]

[tool.setuptools.package-data]
pysymex = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short -n auto --durations=25 --durations-min=2.0"
asyncio_mode = "auto"
timeout = 120
timeout_method = "thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as performance benchmarks",
    "gpu: marks tests requiring GPU hardware",
    "timeout: per-test timeout override (provided by pytest-timeout)",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
stubPath = "typings"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedImport = "warning"
exclude = [
    "build",
    "_*.py",
    "scripts",
    "examples",
    "benchmarks",
    "tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[tool.coverage.run]
source = ["pysymex"]
branch = true
parallel = true
omit = ["pysymex/__pycache__/*", "pysymex/_*.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.xml]
output = "coverage.xml"
