[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysymex"
version = "0.1.0a4"
description = "EDUCATIONAL PURPOSES ONLY: A symbolic execution engine for studying formal verification concepts. Not for production use."
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "pysymex Team"}
]
keywords = [
    "symbolic-execution",
    "static-analysis",
    "bytecode",
    "z3",
    "educational",
    "research-prototype",
]
classifiers = [
    "Development Status :: 4 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "z3-solver==4.15.3.0",
    "pydantic==2.12.5",
    "immutables==0.20",
    "numpy>=2.1.0",
    "numba==0.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "psutil>=5.9.0",
    "hypothesis>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
pysymex = "pysymex.cli:main"

[project.urls]
Homepage = "https://github.com/darkoss1/pysymex"
Documentation = "https://github.com/darkoss1/pysymex#readme"
Repository = "https://github.com/darkoss1/pysymex"
Issues = "https://github.com/darkoss1/pysymex/issues"

[tool.setuptools.packages.find]
include = ["pysymex*"]

[tool.setuptools.package-data]
pysymex = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
norecursedirs = [".hypothesis", ".pytest_runtime", "_tmp_rt_*", "__pycache__", ".git", ".venv", "tests_backup"]
addopts = "-v --tb=short -n auto --import-mode=importlib --durations=25 --durations-min=2.0"
asyncio_mode = "auto"
timeout = 120
timeout_method = "thread"
markers = [
    "timeout: per-test timeout override (provided by pytest-timeout)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["pysymex"]
stubPath = "typings"
typeCheckingMode = "strict"
exclude = [
    "scripts",
    "examples",
    "benchmarks",
    "tests",
]

[tool.coverage.run]
source = ["pysymex"]
branch = true
parallel = true
omit = ["pysymex/__pycache__/*", "pysymex/_*.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.xml]
output = "coverage.xml"
